fixed some configurations, and paths